# light-poseidon

./: .cargo-rdme.toml  Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: main.yml  pr.yml  release-pr.yml  release.yml  test.yml
benches/: bn254_x5_3.rs
light-poseidon/: Cargo.toml
light-poseidon/benches/: bn254_x5.rs
light-poseidon/src/: lib.rs
light-poseidon/src/parameters/: bn254_x5.rs  mod.rs
light-poseidon/tests/: bn254_fq_x5.rs
src/: lib.rs
src/parameters/: bn254_x5_3.rs  mod.rs
tests/: bn254_fq_x5_3.rs
xtask/: Cargo.toml
xtask/src/: generate_parameters.rs  generate_readme.rs  main.rs
