[package]
name = "light-poseidon"
version = "0.2.0"
authors = ["Mike Rostecki <vadorovsky@protonmail.com>"]
description = "Poseidon hash implementation in Rust"
repository = "https://github.com/Lightprotocol/light-poseidon"
readme = "../README.md"
keywords = ["cryptography", "hash", "poseidon", "zero-knowledge", "zkSNARK"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
num-bigint = "0.4.4"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
hex = "0.4.3"

[[bench]]
name = "bn254_x5"
harness = false
